Bug 1612610 - Use the bounding box of the full textrun range, not just an individual glyph run, when double-buffering for color/bold drawing. r=lsalzman a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D62900